backend/interpreter/analyzer/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> print SEMICOLON
Rule 5     instruccion -> declarevar SEMICOLON
Rule 6     instruccion -> declareConst SEMICOLON
Rule 7     instruccion -> assignVar SEMICOLON
Rule 8     instruccion -> declareArray SEMICOLON
Rule 9     instruccion -> declareArrayConst SEMICOLON
Rule 10    instruccion -> assingArray SEMICOLON
Rule 11    instruccion -> arrayFuncs SEMICOLON
Rule 12    instruccion -> if_else
Rule 13    instruccion -> case_inst
Rule 14    instruccion -> ternario SEMICOLON
Rule 15    instruccion -> while_
Rule 16    instruccion -> for_
Rule 17    instruccion -> transfer SEMICOLON
Rule 18    instruccion -> createInterface
Rule 19    instruccion -> declareInterface SEMICOLON
Rule 20    instruccion -> modifyInterface SEMICOLON
Rule 21    instruccion -> declareFunction
Rule 22    instruccion -> callFunction SEMICOLON
Rule 23    print -> CONSOLE DOT LOG PARA expression_list PARC
Rule 24    declarevar -> RVAR ID DOUBLEDOT type EQUAL expression
Rule 25    declarevar -> RVAR ID EQUAL expression
Rule 26    declarevar -> RVAR ID DOUBLEDOT type
Rule 27    declareConst -> RCONST ID DOUBLEDOT type EQUAL expression
Rule 28    declareConst -> RCONST ID EQUAL expression
Rule 29    declareConst -> RCONST ID DOUBLEDOT type
Rule 30    assignVar -> ID EQUAL expression
Rule 31    assignVar -> ID PLUS EQUAL expression
Rule 32    assignVar -> ID LESS EQUAL expression
Rule 33    declareArray -> RVAR ID DOUBLEDOT type BRACKETO BRACKETC EQUAL BRACKETO expression_list BRACKETC
Rule 34    declareArray -> RVAR ID DOUBLEDOT type BRACKETO BRACKETC EQUAL expression
Rule 35    declareArray -> RVAR ID DOUBLEDOT type BRACKETO BRACKETC EQUAL BRACKETO BRACKETC
Rule 36    declareArrayConst -> RCONST ID DOUBLEDOT type BRACKETO BRACKETC EQUAL BRACKETO expression_list BRACKETC
Rule 37    declareArrayConst -> RCONST ID DOUBLEDOT type BRACKETO BRACKETC EQUAL expression
Rule 38    declareArrayConst -> RCONST ID DOUBLEDOT type BRACKETO BRACKETC EQUAL BRACKETO BRACKETC
Rule 39    assingArray -> ID BRACKETO expression BRACKETC EQUAL expression
Rule 40    arrayFuncs -> ID DOT RPUSH PARA expression PARC
Rule 41    if_else -> RIF PARA expression PARC LLAVEA instrucciones LLAVEC else
Rule 42    else -> RELSE LLAVEA instrucciones LLAVEC
Rule 43    else -> RELSE if_else
Rule 44    else -> <empty>
Rule 45    case_inst -> RSWITCH PARA expression PARC LLAVEA cases RDEFAULT DOUBLEDOT instrucciones LLAVEC
Rule 46    cases -> cases case
Rule 47    cases -> case
Rule 48    case -> RCASE expression DOUBLEDOT instrucciones
Rule 49    ternario -> expression QUESTIONM expression DOUBLEDOT expression
Rule 50    while_ -> RWHILE PARA expression PARC LLAVEA instrucciones LLAVEC
Rule 51    for_ -> RFOR PARA declarevar SEMICOLON relacional SEMICOLON id_ PLUS PLUS PARC LLAVEA instrucciones LLAVEC
Rule 52    for_ -> RFOR PARA declarevar SEMICOLON relacional SEMICOLON id_ LESS LESS PARC LLAVEA instrucciones LLAVEC
Rule 53    transfer -> RBREAK
Rule 54    transfer -> RCONTINUE
Rule 55    transfer -> RRETURN
Rule 56    transfer -> RRETURN expression
Rule 57    createInterface -> RINTERFACE ID LLAVEA attributesList LLAVEC
Rule 58    attributesList -> attributesList ID DOUBLEDOT type SEMICOLON
Rule 59    attributesList -> ID DOUBLEDOT type SEMICOLON
Rule 60    declareInterface -> RVAR ID DOUBLEDOT ID EQUAL LLAVEA interfaceContent LLAVEC
Rule 61    declareInterface -> RCONST ID DOUBLEDOT ID EQUAL LLAVEA interfaceContent LLAVEC
Rule 62    interfaceContent -> interfaceContent COMMA ID DOUBLEDOT expression
Rule 63    interfaceContent -> ID DOUBLEDOT expression
Rule 64    modifyInterface -> ID DOT ID EQUAL expression
Rule 65    declareFunction -> RFUNCTION ID PARA funcparams PARC returntype LLAVEA instrucciones LLAVEC
Rule 66    funcparams -> funcparams COMMA param
Rule 67    funcparams -> param
Rule 68    funcparams -> <empty>
Rule 69    param -> ID DOUBLEDOT type
Rule 70    returntype -> DOUBLEDOT type
Rule 71    returntype -> <empty>
Rule 72    callFunction -> ID PARA expression_list PARC
Rule 73    callFunction -> ID PARA PARC
Rule 74    expression -> primitivo
Rule 75    expression -> aritmetica
Rule 76    expression -> relacional
Rule 77    expression -> logica
Rule 78    expression -> expression_group
Rule 79    expression -> id_
Rule 80    expression -> arraysExpression
Rule 81    expression -> callInterface
Rule 82    expression -> boolean
Rule 83    expression -> callFunction
Rule 84    expression -> funcEmbebida
Rule 85    funcEmbebida -> RPARSEINT PARA expression PARC
Rule 86    funcEmbebida -> RPARSEFLOAT PARA expression PARC
Rule 87    funcEmbebida -> ID DOT RTOSTRING PARA PARC
Rule 88    funcEmbebida -> FALSE DOT RTOSTRING PARA PARC
Rule 89    funcEmbebida -> ID DOT RTOLOWERCASE PARA PARC
Rule 90    funcEmbebida -> ID DOT RTOUPPERCASE PARA PARC
Rule 91    funcEmbebida -> RTYPEOF expression
Rule 92    expression_group -> PARA expression PARC
Rule 93    callInterface -> ID DOT ID
Rule 94    callInterface -> ROBJECT DOT RKEYS PARA ID PARC
Rule 95    callInterface -> ROBJECT DOT RVALUES PARA ID PARC
Rule 96    expression_list -> expression_list COMMA expression
Rule 97    expression_list -> expression
Rule 98    id_ -> ID
Rule 99    id_ -> ID BRACKETO expression BRACKETC
Rule 100   aritmetica -> expression PLUS expression
Rule 101   aritmetica -> expression BY expression
Rule 102   aritmetica -> expression DIVIDED expression
Rule 103   aritmetica -> expression LESS expression
Rule 104   aritmetica -> expression MODUL expression
Rule 105   aritmetica -> LESS expression
Rule 106   relacional -> expression DEQUAL expression
Rule 107   relacional -> expression DIFERENT expression
Rule 108   relacional -> expression MINOR expression
Rule 109   relacional -> expression MINOREQUAL expression
Rule 110   relacional -> expression GREATER expression
Rule 111   relacional -> expression GREATEREQUAL expression
Rule 112   logica -> expression AND expression
Rule 113   logica -> expression OR expression
Rule 114   logica -> NOT expression
Rule 115   primitivo -> NUMBER
Rule 116   primitivo -> FLOAT
Rule 117   primitivo -> STRING
Rule 118   arraysExpression -> ID DOT RPOP PARA PARC
Rule 119   arraysExpression -> ID DOT RINDEXOF PARA expression PARC
Rule 120   arraysExpression -> ID DOT RJOIN PARA PARC
Rule 121   arraysExpression -> ID DOT RLENGTH
Rule 122   boolean -> TRUE
Rule 123   boolean -> FALSE
Rule 124   type -> RNUMBER
Rule 125   type -> RFLOAT
Rule 126   type -> RSTRING
Rule 127   type -> RBOOLEAN
Rule 128   type -> type BRACKETO BRACKETC

Terminals, with rules where they appear

AND                  : 112
BRACKETC             : 33 33 34 35 35 36 36 37 38 38 39 99 128
BRACKETO             : 33 33 34 35 35 36 36 37 38 38 39 99 128
BY                   : 101
COMMA                : 62 66 96
CONSOLE              : 23
DEQUAL               : 106
DIFERENT             : 107
DIVIDED              : 102
DOT                  : 23 40 64 87 88 89 90 93 94 95 118 119 120 121
DOUBLEDOT            : 24 26 27 29 33 34 35 36 37 38 45 48 49 58 59 60 61 62 63 69 70
EQUAL                : 24 25 27 28 30 31 32 33 34 35 36 37 38 39 60 61 64
FALSE                : 88 123
FLOAT                : 116
GREATER              : 110
GREATEREQUAL         : 111
ID                   : 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 57 58 59 60 60 61 61 62 63 64 64 65 69 72 73 87 89 90 93 93 94 95 98 99 118 119 120 121
LESS                 : 32 52 52 103 105
LLAVEA               : 41 42 45 50 51 52 57 60 61 65
LLAVEC               : 41 42 45 50 51 52 57 60 61 65
LOG                  : 23
MINOR                : 108
MINOREQUAL           : 109
MODUL                : 104
NOT                  : 114
NUMBER               : 115
OR                   : 113
PARA                 : 23 40 41 45 50 51 52 65 72 73 85 86 87 88 89 90 92 94 95 118 119 120
PARC                 : 23 40 41 45 50 51 52 65 72 73 85 86 87 88 89 90 92 94 95 118 119 120
PLUS                 : 31 51 51 100
QUESTIONM            : 49
RBOOLEAN             : 127
RBREAK               : 53
RCASE                : 48
RCONST               : 27 28 29 36 37 38 61
RCONTINUE            : 54
RDEFAULT             : 45
RELSE                : 42 43
RFLOAT               : 125
RFOR                 : 51 52
RFUNCTION            : 65
RIF                  : 41
RINDEXOF             : 119
RINTERFACE           : 57
RJOIN                : 120
RKEYS                : 94
RLENGTH              : 121
RNUMBER              : 124
ROBJECT              : 94 95
RPARSEFLOAT          : 86
RPARSEINT            : 85
RPOP                 : 118
RPUSH                : 40
RRETURN              : 55 56
RSTRING              : 126
RSWITCH              : 45
RTOLOWERCASE         : 89
RTOSTRING            : 87 88
RTOUPPERCASE         : 90
RTYPEOF              : 91
RVALUES              : 95
RVAR                 : 24 25 26 33 34 35 60
RWHILE               : 50
SEMICOLON            : 4 5 6 7 8 9 10 11 14 17 19 20 22 51 51 52 52 58 59
STRING               : 117
TRUE                 : 122
error                : 

Nonterminals, with rules where they appear

aritmetica           : 75
arrayFuncs           : 11
arraysExpression     : 80
assignVar            : 7
assingArray          : 10
attributesList       : 57 58
boolean              : 82
callFunction         : 22 83
callInterface        : 81
case                 : 46 47
case_inst            : 13
cases                : 45 46
createInterface      : 18
declareArray         : 8
declareArrayConst    : 9
declareConst         : 6
declareFunction      : 21
declareInterface     : 19
declarevar           : 5 51 52
else                 : 41
expression           : 24 25 27 28 30 31 32 34 37 39 39 40 41 45 48 49 49 49 50 56 62 63 64 85 86 91 92 96 97 99 100 100 101 101 102 102 103 103 104 104 105 106 106 107 107 108 108 109 109 110 110 111 111 112 112 113 113 114 119
expression_group     : 78
expression_list      : 23 33 36 72 96
for_                 : 16
funcEmbebida         : 84
funcparams           : 65 66
id_                  : 51 52 79
if_else              : 12 43
instruccion          : 2 3
instrucciones        : 1 2 41 42 45 48 50 51 52 65
interfaceContent     : 60 61 62
logica               : 77
modifyInterface      : 20
param                : 66 67
primitivo            : 74
print                : 4
relacional           : 51 52 76
returntype           : 65
start                : 0
ternario             : 14
transfer             : 17
type                 : 24 26 27 29 33 34 35 36 37 38 58 59 69 70 128
while_               : 15

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . print SEMICOLON
    (5) instruccion -> . declarevar SEMICOLON
    (6) instruccion -> . declareConst SEMICOLON
    (7) instruccion -> . assignVar SEMICOLON
    (8) instruccion -> . declareArray SEMICOLON
    (9) instruccion -> . declareArrayConst SEMICOLON
    (10) instruccion -> . assingArray SEMICOLON
    (11) instruccion -> . arrayFuncs SEMICOLON
    (12) instruccion -> . if_else
    (13) instruccion -> . case_inst
    (14) instruccion -> . ternario SEMICOLON
    (15) instruccion -> . while_
    (16) instruccion -> . for_
    (17) instruccion -> . transfer SEMICOLON
    (18) instruccion -> . createInterface
    (19) instruccion -> . declareInterface SEMICOLON
    (20) instruccion -> . modifyInterface SEMICOLON
    (21) instruccion -> . declareFunction
    (22) instruccion -> . callFunction SEMICOLON
    (23) print -> . CONSOLE DOT LOG PARA expression_list PARC
    (24) declarevar -> . RVAR ID DOUBLEDOT type EQUAL expression
    (25) declarevar -> . RVAR ID EQUAL expression
    (26) declarevar -> . RVAR ID DOUBLEDOT type
    (27) declareConst -> . RCONST ID DOUBLEDOT type EQUAL expression
    (28) declareConst -> . RCONST ID EQUAL expression
    (29) declareConst -> . RCONST ID DOUBLEDOT type
    (30) assignVar -> . ID EQUAL expression
    (31) assignVar -> . ID PLUS EQUAL expression
    (32) assignVar -> . ID LESS EQUAL expression
    (33) declareArray -> . RVAR ID DOUBLEDOT type BRACKETO BRACKETC EQUAL BRACKETO expression_list BRACKETC
    (34) declareArray -> . RVAR ID DOUBLEDOT type BRACKETO BRACKETC EQUAL expression
    (35) declareArray -> . RVAR ID DOUBLEDOT type BRACKETO BRACKETC EQUAL BRACKETO BRACKETC
    (36) declareArrayConst -> . RCONST ID DOUBLEDOT type BRACKETO BRACKETC EQUAL BRACKETO expression_list BRACKETC
    (37) declareArrayConst -> . RCONST ID DOUBLEDOT type BRACKETO BRACKETC EQUAL expression
    (38) declareArrayConst -> . RCONST ID DOUBLEDOT type BRACKETO BRACKETC EQUAL BRACKETO BRACKETC
    (39) assingArray -> . ID BRACKETO expression BRACKETC EQUAL expression
    (40) arrayFuncs -> . ID DOT RPUSH PARA expression PARC
    (41) if_else -> . RIF PARA expression PARC LLAVEA instrucciones LLAVEC else
    (45) case_inst -> . RSWITCH PARA expression PARC LLAVEA cases RDEFAULT DOUBLEDOT instrucciones LLAVEC
    (49) ternario -> . expression QUESTIONM expression DOUBLEDOT expression
    (50) while_ -> . RWHILE PARA expression PARC LLAVEA instrucciones LLAVEC
    (51) for_ -> . RFOR PARA declarevar SEMICOLON relacional SEMICOLON id_ PLUS PLUS PARC LLAVEA instrucciones LLAVEC
    (52) for_ -> . RFOR PARA declarevar SEMICOLON relacional SEMICOLON id_ LESS LESS PARC LLAVEA instrucciones LLAVEC
    (53) transfer -> . RBREAK
    (54) transfer -> . RCONTINUE
    (55) transfer -> . RRETURN
    (56) transfer -> . RRETURN expression
    (57) createInterface -> . RINTERFACE ID LLAVEA attributesList LLAVEC
    (60) declareInterface -> . RVAR ID DOUBLEDOT ID EQUAL LLAVEA interfaceContent LLAVEC
    (61) declareInterface -> . RCONST ID DOUBLEDOT ID EQUAL LLAVEA interfaceContent LLAVEC
    (64) modifyInterface -> . ID DOT ID EQUAL expression
    (65) declareFunction -> . RFUNCTION ID PARA funcparams PARC returntype LLAVEA instrucciones LLAVEC
    (72) callFunction -> . ID PARA expression_list PARC
    (73) callFunction -> . ID PARA PARC
    (74) expression -> . primitivo
    (75) expression -> . aritmetica
    (76) expression -> . relacional
    (77) expression -> . logica
    (78) expression -> . expression_group
    (79) expression -> . id_
    (80) expression -> . arraysExpression
    (81) expression -> . callInterface
    (82) expression -> . boolean
    (83) expression -> . callFunction
    (84) expression -> . funcEmbebida
    (115) primitivo -> . NUMBER
    (116) primitivo -> . FLOAT
    (117) primitivo -> . STRING
    (100) aritmetica -> . expression PLUS expression
    (101) aritmetica -> . expression BY expression
    (102) aritmetica -> . expression DIVIDED expression
    (103) aritmetica -> . expression LESS expression
    (104) aritmetica -> . expression MODUL expression
    (105) aritmetica -> . LESS expression
    (106) relacional -> . expression DEQUAL expression
    (107) relacional -> . expression DIFERENT expression
    (108) relacional -> . expression MINOR expression
    (109) relacional -> . expression MINOREQUAL expression
    (110) relacional -> . expression GREATER expression
    (111) relacional -> . expression GREATEREQUAL expression
    (112) logica -> . expression AND expression
    (113) logica -> . expression OR expression
    (114) logica -> . NOT expression
    (92) expression_group -> . PARA expression PARC
    (98) id_ -> . ID
    (99) id_ -> . ID BRACKETO expression BRACKETC
    (118) arraysExpression -> . ID DOT RPOP PARA PARC
    (119) arraysExpression -> . ID DOT RINDEXOF PARA expression PARC
    (120) arraysExpression -> . ID DOT RJOIN PARA PARC
    (121) arraysExpression -> . ID DOT RLENGTH
    (93) callInterface -> . ID DOT ID
    (94) callInterface -> . ROBJECT DOT RKEYS PARA ID PARC
    (95) callInterface -> . ROBJECT DOT RVALUES PARA ID PARC
    (122) boolean -> . TRUE
    (123) boolean -> . FALSE
    (85) funcEmbebida -> . RPARSEINT PARA expression PARC
    (86) funcEmbebida -> . RPARSEFLOAT PARA expression PARC
    (87) funcEmbebida -> . ID DOT RTOSTRING PARA PARC
    (88) funcEmbebida -> . FALSE DOT RTOSTRING PARA PARC
    (89) funcEmbebida -> . ID DOT RTOLOWERCASE PARA PARC
    (90) funcEmbebida -> . ID DOT RTOUPPERCASE PARA PARC
    (91) funcEmbebida -> . RTYPEOF expression

    CONSOLE         shift and go to state 23
    RVAR            shift and go to state 25
    RCONST          shift and go to state 28
    ID              shift and go to state 26
    RIF             shift and go to state 30
    RSWITCH         shift and go to state 31
    RWHILE          shift and go to state 32
    RFOR            shift and go to state 33
    RBREAK          shift and go to state 36
    RCONTINUE       shift and go to state 37
    RRETURN         shift and go to state 38
    RINTERFACE      shift and go to state 39
    RFUNCTION       shift and go to state 40
    NUMBER          shift and go to state 49
    FLOAT           shift and go to state 50
    STRING          shift and go to state 51
    LESS            shift and go to state 29
    NOT             shift and go to state 52
    PARA            shift and go to state 24
    ROBJECT         shift and go to state 53
    TRUE            shift and go to state 54
    FALSE           shift and go to state 55
    RPARSEINT       shift and go to state 56
    RPARSEFLOAT     shift and go to state 57
    RTYPEOF         shift and go to state 58

    start                          shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    print                          shift and go to state 4
    declarevar                     shift and go to state 5
    declareConst                   shift and go to state 6
    assignVar                      shift and go to state 7
    declareArray                   shift and go to state 8
    declareArrayConst              shift and go to state 9
    assingArray                    shift and go to state 10
    arrayFuncs                     shift and go to state 11
    if_else                        shift and go to state 12
    case_inst                      shift and go to state 13
    ternario                       shift and go to state 14
    while_                         shift and go to state 15
    for_                           shift and go to state 16
    transfer                       shift and go to state 17
    createInterface                shift and go to state 18
    declareInterface               shift and go to state 19
    modifyInterface                shift and go to state 20
    declareFunction                shift and go to state 21
    callFunction                   shift and go to state 22
    expression                     shift and go to state 27
    relacional                     shift and go to state 34
    id_                            shift and go to state 35
    primitivo                      shift and go to state 41
    aritmetica                     shift and go to state 42
    logica                         shift and go to state 43
    expression_group               shift and go to state 44
    arraysExpression               shift and go to state 45
    callInterface                  shift and go to state 46
    boolean                        shift and go to state 47
    funcEmbebida                   shift and go to state 48

state 1

    (0) S' -> start .



state 2

    (1) start -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . print SEMICOLON
    (5) instruccion -> . declarevar SEMICOLON
    (6) instruccion -> . declareConst SEMICOLON
    (7) instruccion -> . assignVar SEMICOLON
    (8) instruccion -> . declareArray SEMICOLON
    (9) instruccion -> . declareArrayConst SEMICOLON
    (10) instruccion -> . assingArray SEMICOLON
    (11) instruccion -> . arrayFuncs SEMICOLON
    (12) instruccion -> . if_else
    (13) instruccion -> . case_inst
    (14) instruccion -> . ternario SEMICOLON
    (15) instruccion -> . while_
    (16) instruccion -> . for_
    (17) instruccion -> . transfer SEMICOLON
    (18) instruccion -> . createInterface
    (19) instruccion -> . declareInterface SEMICOLON
    (20) instruccion -> . modifyInterface SEMICOLON
    (21) instruccion -> . declareFunction
    (22) instruccion -> . callFunction SEMICOLON
    (23) print -> . CONSOLE DOT LOG PARA expression_list PARC
    (24) declarevar -> . RVAR ID DOUBLEDOT type EQUAL expression
    (25) declarevar -> . RVAR ID EQUAL expression
    (26) declarevar -> . RVAR ID DOUBLEDOT type
    (27) declareConst -> . RCONST ID DOUBLEDOT type EQUAL expression
    (28) declareConst -> . RCONST ID EQUAL expression
    (29) declareConst -> . RCONST ID DOUBLEDOT type
    (30) assignVar -> . ID EQUAL expression
    (31) assignVar -> . ID PLUS EQUAL expression
    (32) assignVar -> . ID LESS EQUAL expression
    (33) declareArray -> . RVAR ID DOUBLEDOT type BRACKETO BRACKETC EQUAL BRACKETO expression_list BRACKETC
    (34) declareArray -> . RVAR ID DOUBLEDOT type BRACKETO BRACKETC EQUAL expression
    (35) declareArray -> . RVAR ID DOUBLEDOT type BRACKETO BRACKETC EQUAL BRACKETO BRACKETC
    (36) declareArrayConst -> . RCONST ID DOUBLEDOT type BRACKETO BRACKETC EQUAL BRACKETO expression_list BRACKETC
    (37) declareArrayConst -> . RCONST ID DOUBLEDOT type BRACKETO BRACKETC EQUAL expression
    (38) declareArrayConst -> . RCONST ID DOUBLEDOT type BRACKETO BRACKETC EQUAL BRACKETO BRACKETC
    (39) assingArray -> . ID BRACKETO expression BRACKETC EQUAL expression
    (40) arrayFuncs -> . ID DOT RPUSH PARA expression PARC
    (41) if_else -> . RIF PARA expression PARC LLAVEA instrucciones LLAVEC else
    (45) case_inst -> . RSWITCH PARA expression PARC LLAVEA cases RDEFAULT DOUBLEDOT instrucciones LLAVEC
    (49) ternario -> . expression QUESTIONM expression DOUBLEDOT expression
    (50) while_ -> . RWHILE PARA expression PARC LLAVEA instrucciones LLAVEC
    (51) for_ -> . RFOR PARA declarevar SEMICOLON relacional SEMICOLON id_ PLUS PLUS PARC LLAVEA instrucciones LLAVEC
    (52) for_ -> . RFOR PARA declarevar SEMICOLON relacional SEMICOLON id_ LESS LESS PARC LLAVEA instrucciones LLAVEC
    (53) transfer -> . RBREAK
    (54) transfer -> . RCONTINUE
    (55) transfer -> . RRETURN
    (56) transfer -> . RRETURN expression
    (57) createInterface -> . RINTERFACE ID LLAVEA attributesList LLAVEC
    (60) declareInterface -> . RVAR ID DOUBLEDOT ID EQUAL LLAVEA interfaceContent LLAVEC
    (61) declareInterface -> . RCONST ID DOUBLEDOT ID EQUAL LLAVEA interfaceContent LLAVEC
    (64) modifyInterface -> . ID DOT ID EQUAL expression
    (65) declareFunction -> . RFUNCTION ID PARA funcparams PARC returntype LLAVEA instrucciones LLAVEC
    (72) callFunction -> . ID PARA expression_list PARC
    (73) callFunction -> . ID PARA PARC
    (74) expression -> . primitivo
    (75) expression -> . aritmetica
    (76) expression -> . relacional
    (77) expression -> . logica
    (78) expression -> . expression_group
    (79) expression -> . id_
    (80) expression -> . arraysExpression
    (81) expression -> . callInterface
    (82) expression -> . boolean
    (83) expression -> . callFunction
    (84) expression -> . funcEmbebida
    (115) primitivo -> . NUMBER
    (116) primitivo -> . FLOAT
    (117) primitivo -> . STRING
    (100) aritmetica -> . expression PLUS expression
    (101) aritmetica -> . expression BY expression
    (102) aritmetica -> . expression DIVIDED expression
    (103) aritmetica -> . expression LESS expression
    (104) aritmetica -> . expression MODUL expression
    (105) aritmetica -> . LESS expression
    (106) relacional -> . expression DEQUAL expression
    (107) relacional -> . expression DIFERENT expression
    (108) relacional -> . expression MINOR expression
    (109) relacional -> . expression MINOREQUAL expression
    (110) relacional -> . expression GREATER expression
    (111) relacional -> . expression GREATEREQUAL expression
    (112) logica -> . expression AND expression
    (113) logica -> . expression OR expression
    (114) logica -> . NOT expression
    (92) expression_group -> . PARA expression PARC
    (98) id_ -> . ID
    (99) id_ -> . ID BRACKETO expression BRACKETC
    (118) arraysExpression -> . ID DOT RPOP PARA PARC
    (119) arraysExpression -> . ID DOT RINDEXOF PARA expression PARC
    (120) arraysExpression -> . ID DOT RJOIN PARA PARC
    (121) arraysExpression -> . ID DOT RLENGTH
    (93) callInterface -> . ID DOT ID
    (94) callInterface -> . ROBJECT DOT RKEYS PARA ID PARC
    (95) callInterface -> . ROBJECT DOT RVALUES PARA ID PARC
    (122) boolean -> . TRUE
    (123) boolean -> . FALSE
    (85) funcEmbebida -> . RPARSEINT PARA expression PARC
    (86) funcEmbebida -> . RPARSEFLOAT PARA expression PARC
    (87) funcEmbebida -> . ID DOT RTOSTRING PARA PARC
    (88) funcEmbebida -> . FALSE DOT RTOSTRING PARA PARC
    (89) funcEmbebida -> . ID DOT RTOLOWERCASE PARA PARC
    (90) funcEmbebida -> . ID DOT RTOUPPERCASE PARA PARC
    (91) funcEmbebida -> . RTYPEOF expression

    $end            reduce using rule 1 (start -> instrucciones .)
    CONSOLE         shift and go to state 23
    RVAR            shift and go to state 25
    RCONST          shift and go to state 28
    ID              shift and go to state 26
    RIF             shift and go to state 30
    RSWITCH         shift and go to state 31
    RWHILE          shift and go to state 32
    RFOR            shift and go to state 33
    RBREAK          shift and go to state 36
    RCONTINUE       shift and go to state 37
    RRETURN         shift and go to state 38
    RINTERFACE      shift and go to state 39
    RFUNCTION       shift and go to state 40
    NUMBER          shift and go to state 49
    FLOAT           shift and go to state 50
    STRING          shift and go to state 51
    LESS            shift and go to state 29
    NOT             shift and go to state 52
    PARA            shift and go to state 24
    ROBJECT         shift and go to state 53
    TRUE            shift and go to state 54
    FALSE           shift and go to state 55
    RPARSEINT       shift and go to state 56
    RPARSEFLOAT     shift and go to state 57
    RTYPEOF         shift and go to state 58

    instruccion                    shift and go to state 59
    print                          shift and go to state 4
    declarevar                     shift and go to state 5
    declareConst                   shift and go to state 6
    assignVar                      shift and go to state 7
    declareArray                   shift and go to state 8
    declareArrayConst              shift and go to state 9
    assingArray                    shift and go to state 10
    arrayFuncs                     shift and go to state 11
    if_else                        shift and go to state 12
    case_inst                      shift and go to state 13
    ternario                       shift and go to state 14
    while_                         shift and go to state 15
    for_                           shift and go to state 16
    transfer                       shift and go to state 17
    createInterface                shift and go to state 18
    declareInterface               shift and go to state 19
    modifyInterface                shift and go to state 20
    declareFunction                shift and go to state 21
    callFunction                   shift and go to state 22
    expression                     shift and go to state 27
    relacional                     shift and go to state 34
    id_                            shift and go to state 35
    primitivo                      shift and go to state 41
    aritmetica                     shift and go to state 42
    logica                         shift and go to state 43
    expression_group               shift and go to state 44
    arraysExpression               shift and go to state 45
    callInterface                  shift and go to state 46
    boolean                        shift and go to state 47
    funcEmbebida                   shift and go to state 48

state 3

    (3) instrucciones -> instruccion .

    CONSOLE         reduce using rule 3 (instrucciones -> instruccion .)
    RVAR            reduce using rule 3 (instrucciones -> instruccion .)
    RCONST          reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    RSWITCH         reduce using rule 3 (instrucciones -> instruccion .)
    RWHILE          reduce using rule 3 (instrucciones -> instruccion .)
    RFOR            reduce using rule 3 (instrucciones -> instruccion .)
    RBREAK          reduce using rule 3 (instrucciones -> instruccion .)
    RCONTINUE       reduce using rule 3 (instrucciones -> instruccion .)
    RRETURN         reduce using rule 3 (instrucciones -> instruccion .)
    RINTERFACE      reduce using rule 3 (instrucciones -> instruccion .)
    RFUNCTION       reduce using rule 3 (instrucciones -> instruccion .)
    NUMBER          reduce using rule 3 (instrucciones -> instruccion .)
    FLOAT           reduce using rule 3 (instrucciones -> instruccion .)
    STRING          reduce using rule 3 (instrucciones -> instruccion .)
    LESS            reduce using rule 3 (instrucciones -> instruccion .)
    NOT             reduce using rule 3 (instrucciones -> instruccion .)
    PARA            reduce using rule 3 (instrucciones -> instruccion .)
    ROBJECT         reduce using rule 3 (instrucciones -> instruccion .)
    TRUE            reduce using rule 3 (instrucciones -> instruccion .)
    FALSE           reduce using rule 3 (instrucciones -> instruccion .)
    RPARSEINT       reduce using rule 3 (instrucciones -> instruccion .)
    RPARSEFLOAT     reduce using rule 3 (instrucciones -> instruccion .)
    RTYPEOF         reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVEC          reduce using rule 3 (instrucciones -> instruccion .)
    RDEFAULT        reduce using rule 3 (instrucciones -> instruccion .)
    RCASE           reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> print . SEMICOLON

    SEMICOLON       shift and go to state 60


state 5

    (5) instruccion -> declarevar . SEMICOLON

    SEMICOLON       shift and go to state 61


state 6

    (6) instruccion -> declareConst . SEMICOLON

    SEMICOLON       shift and go to state 62


state 7

    (7) instruccion -> assignVar . SEMICOLON

    SEMICOLON       shift and go to state 63


state 8

    (8) instruccion -> declareArray . SEMICOLON

    SEMICOLON       shift and go to state 64


state 9

    (9) instruccion -> declareArrayConst . SEMICOLON

    SEMICOLON       shift and go to state 65


state 10

    (10) instruccion -> assingArray . SEMICOLON

    SEMICOLON       shift and go to state 66


state 11

    (11) instruccion -> arrayFuncs . SEMICOLON

    SEMICOLON       shift and go to state 67


state 12

    (12) instruccion -> if_else .

    CONSOLE         reduce using rule 12 (instruccion -> if_else .)
    RVAR            reduce using rule 12 (instruccion -> if_else .)
    RCONST          reduce using rule 12 (instruccion -> if_else .)
    ID              reduce using rule 12 (instruccion -> if_else .)
    RIF             reduce using rule 12 (instruccion -> if_else .)
    RSWITCH         reduce using rule 12 (instruccion -> if_else .)
    RWHILE          reduce using rule 12 (instruccion -> if_else .)
    RFOR            reduce using rule 12 (instruccion -> if_else .)
    RBREAK          reduce using rule 12 (instruccion -> if_else .)
    RCONTINUE       reduce using rule 12 (instruccion -> if_else .)
    RRETURN         reduce using rule 12 (instruccion -> if_else .)
    RINTERFACE      reduce using rule 12 (instruccion -> if_else .)
    RFUNCTION       reduce using rule 12 (instruccion -> if_else .)
    NUMBER          reduce using rule 12 (instruccion -> if_else .)
    FLOAT           reduce using rule 12 (instruccion -> if_else .)
    STRING          reduce using rule 12 (instruccion -> if_else .)
    LESS            reduce using rule 12 (instruccion -> if_else .)
    NOT             reduce using rule 12 (instruccion -> if_else .)
    PARA            reduce using rule 12 (instruccion -> if_else .)
    ROBJECT         reduce using rule 12 (instruccion -> if_else .)
    TRUE            reduce using rule 12 (instruccion -> if_else .)
    FALSE           reduce using rule 12 (instruccion -> if_else .)
    RPARSEINT       reduce using rule 12 (instruccion -> if_else .)
    RPARSEFLOAT     reduce using rule 12 (instruccion -> if_else .)
    RTYPEOF         reduce using rule 12 (instruccion -> if_else .)
    $end            reduce using rule 12 (instruccion -> if_else .)
    LLAVEC          reduce using rule 12 (instruccion -> if_else .)
    RDEFAULT        reduce using rule 12 (instruccion -> if_else .)
    RCASE           reduce using rule 12 (instruccion -> if_else .)


state 13

    (13) instruccion -> case_inst .
